# speed-reduction

./: .flake8  .gitignore  README.md  TeX.gitignore  pyproject.toml  requirements.txt
estimation/: ccfi_exports.py  clarksons_orders.py  freight.py  freight_dl.py  freight_ml.py  fuel_price.py  voyage_time.py
report/: main.tex
sample/: __main__.py  fleet.py  globalenv.py  market.py  meanfield.py  preprocess.py  route.py  settlement.py  vessel.py
src/estimation/: __main__.py  ccfi_exports.py  clarksons_exports.py  clarksons_exports_annual.py  clarksons_orders.py  fuel_price.py
src/sample/: __main__.py  fleet.py  global_env.py  global_market.py  meanfield.py  preprocess.py  route.py  settlement.py  vessel.py
test/: grammar.py
tests/: __init__.py  test_core_functions.py  test_data.py  test_main_steps.py  test_sample.py
